deployment-v2.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: sample-web-app-deployment-v2
  labels:
    app: sample-web-app

spec:
  replicas: 1
  selector:
    matchLabels:
      app: sample-web-app
      version: v2
  template:
    metadata:
      labels:
        app: sample-web-app
        version: v2
    spec:
      containers:
      - name: sample-web-app-container
        image: janakiramm/myapp:v2
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 80
