service.yaml
apiVersion: v1
kind: Service
metadata:
  name: sample-web-app-service
  labels:
    app: sample-web-app

spec:
  type: ClusterIP
  selector: 
    app: sample-web-app
  ports:
  - port: 80
    name: http
