destination-rule.yaml
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: sample-web-app
spec:
  host: sample-web-app-service.default.svc.cluster.local
  subsets:
  - labels:   # SELECTOR.
      version: v1 # find pods with label "safe"
    name: safe-group
  - labels:
      version: v2
    name: risky-group
